--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>MyChat</title>
+    <title>Video Chat</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href="{% static 'styles/main.css' %}">
-    <script src="{% static 'js/main.js' %}"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
+    <script src="{% static 'js/streams.js' %}"></script>
 </head>
 <body>
     {% block content %}
