set up session storage

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -7,14 +7,14 @@
     <title>Video Chat</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
-    <script src="{% static 'js/streams.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
     {% block content %}
 
     {% endblock content %}
 </body>
-<!-- <script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.8.0.js' %}"></script> -->
+<script type="text/javascript" src="{% static 'assets/AgoraRTC_N-4.8.0.js' %}"></script>
 
 
 </html>
